--- a/src/Common/serverMain/Makefile
+++ b/src/Common/serverMain/Makefile
@@ -1,4 +1,4 @@
 default :
-	c++ -I ${DEADEND_SRC}/3rdParty/boost/boost_1_61_0 main.cc -o main
+	@c++ -I ${DEADEND_SRC}/3rdParty/boost/boost_1_61_0 main.cc -o main
 clean :
-	$(RM) main 
+	@$(RM) main 
