--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 default :
-	+$(MAKE) -C 3rdParty
-	+$(MAKE) -C Common
+	@+$(MAKE) -C 3rdParty
+	@+$(MAKE) -C Common
 clean : 
-	+$(MAKE) clean -C 3rdParty
-	+$(MAKE) clean -C Common
+	@+$(MAKE) clean -C 3rdParty
+	@+$(MAKE) clean -C Common
