Added a ConnectionManager class to handle multiple TCP connection objects. Still have to wire it in to the TcpServer class.

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,6 +1,10 @@
-*.o
-*.today
-*.log
-/Common/serverMain/serverMain
-/Common/testing/testing
-3rdParty/boost/boost_1_61_0
+# Ignore all
+*
+# Capture .cc and .hh files
+!*.cc
+!*.hh
+# Capture Makefiles
+!Makefile
+# Capture boost files
+!*.jam
+!boost_1_61_0.tar.bz2
