Updated boost to also compile the signals library. Completely reworked the tcpServer library so that it uses a connection manager, and cleaned up the classes to be more organized. Fixed a typo in the README.md. TOD0: Logging An interface to consume the data and call back with a response. Ideally I'll look at creating an httpServer library. SSL?

--- a/src/3rdParty/boost/Makefile
+++ b/src/3rdParty/boost/Makefile
@@ -1,7 +1,7 @@
 # Current DIR
 CURDIR = $(shell pwd)
 # BOOST config
-BOOST_BOOTSTRAP_FLAGS = --prefix=${DEADEND_SRC} --includedir=${DEADEND_TOP}/include/3rdParty --with-libraries="atomic,date_time,exception,filesystem,iostreams,program_options,random,regex,serialization,system,thread" 
+BOOST_BOOTSTRAP_FLAGS = --prefix=${DEADEND_SRC} --includedir=${DEADEND_TOP}/include/3rdParty --with-libraries="atomic,date_time,exception,filesystem,iostreams,program_options,random,regex,serialization,signals,system,thread" 
 BOOST_BUILD_USER_CONFIG = $(CURDIR)/config.jam
 export BOOST_BUILD_USER_CONFIG
 
